--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
@@ -18,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.12",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
