--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
+    "react-autosave": "^0.4.4",
     "react-dom": "^18",
     "styled-components": "^6.1.12",
     "uuid": "^10.0.0",
