--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-autosave": "^0.4.4",
     "react-dom": "^18",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.12",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
