--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^18",
     "react-autosave": "^0.4.4",
     "react-dom": "^18",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.0-alpha.4",
     "styled-components": "^6.1.12",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
