--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@pinecone-database/pinecone": "^3.0.3",
     "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
