installed pdf & docx packages

--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@pinecone-database/pinecone": "^3.0.3",
     "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
+    "docx": "^9.0.3",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "jose": "^5.7.0",
+    "jspdf": "^2.5.2",
     "langchain": "^0.2.14",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.14.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
